# furnace

./: .gitignore
backend/: pyproject.toml  run.py
backend/app/: config.py  database.py  main.py  seed_data.py
backend/app/models/: category.py  product.py
backend/app/repositories/: category.py  product.py
backend/app/routers/: cart.py  categories.py  products.py
backend/app/schemas/: cart.py  category.py  product.py  products.py
backend/app/services/: cart.py  category.py  product.py
